<resources>
    <string name="app_name">FACILITEC Pay</string>
    <string name="login_facilite_comanda_pay">Login FACILITE Comanda Pay</string>
    <string name="todo">TODO</string>
    <string name="comboRepresentante">Selecione o Representante</string>
    <string name="campoSenha">Digite a Senha de Acesso</string>
    <string name="labelSenhaLogin">Digite a Senha</string>
    <string name="labelIPServidor">Informe o IP do Servidor, ex: 192.168.1.2</string>
    <string name="labelDesconto">Informe o Desconto</string>
    <string name="labelCobranca">Informe o Valor</string>
    <string name="labelPortaServidor">Informe a Porta de Comunicação, ex: 8688</string>
    <string name="entrar">Entrar</string>
    <string name="reconectar">Reconectar</string>
    <string name="gravar_parametro">Gravar parâmetros</string>
    <string name="testar_conexao">Testar conexão</string>
    <string name="sincronizar_dados">Sincronizar dados</string>
    <string name="title_activity_login">FACILITEC Pay</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuração</string>
    <string name="menu_login">Login</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>
    <string name="title_activity_sobre">Sobre</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tituloVersao">Versão do Aplicativo</string>
    <string name="tituloServidor">Versão do Servidor</string>
    <string name="tituloNumerdoSerie">Número de Série</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ip_do_servidor">IP do Servidor</string>
    <string name="porta_do_servidor">Porta do Servidor</string>
    <string name="integrador">Integrador</string>
    <string name="mensage_conexao_criada_com_sucesso">Conexão Criada com Sucesso!</string>
    <string name="label_ok">OK</string>
    <string name="action_ok">OK</string>
    <string name="title_erro">Erro</string>
    <string name="mensagem_senha_branco">Senha do Representante está em Branco. Por favor informe a senha</string>
    <string name="senha_invalida">Senha do Representante não confere. Tente novamente!</string>
    <string name="title_informacao">Informação</string>
    <string name="erro_comunicao_servidor">Não foi possível ter resposta do Servidor, verifique se o
                                          mesmo está na mesma rede ou se as configurações estão corretas</string>
    <string name="comunicacao_sucesso">Comunicação efetuada com Sucesso!</string>
    <string name="configuracao_registrada">Configuração registrada com Sucesso!</string>

    <string-array name="integradores">
        <item>Elgin Pay</item>
        <item>Mercado Pago Point</item>
    </string-array>
    <string name="title_activity_lista_comandas">ListaComandas</string>
    <string name="_10">123456</string>
    <string name="ocupado">Ocupado</string>
    <string name="mesa_01">Mesa 01</string>
    <string name="venda_consumidor_teste">VENDA CONSUMIDOR TESTE</string>
    <string name="total_pedido">Total Pedido</string>
    <string name="recebido">Recebido</string>
    <string name="receber">A Receber</string>
    <string name="r_1_110_99">R$ 1.110,99</string>
    <string name="r_20_00">R$ 20,00</string>
    <string name="r_1_090_99">R$ 1.090,99</string>
    <string name="r_x_xxx_xx">( - ) X.XXX,XX</string>
    <string name="a_receber">A Receber</string>
    <string name="troco">Troco</string>
    <string name="desconto">Desconto</string>
    <string name="cobranca">Cobrança</string>
    <string name="total">Total</string>
    <string name="voltar">Voltar</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="desconto_por_valor">R$</string>
    <string name="desconto_por_porcentagem">%</string>
    <string name="dados_ultima_sincronizacao">Os dados serão da última sincronização!</string>
    <string name="erro_dados_acesso">Erro ao validar dados de acesso!</string>
</resources>