<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    layout_constraintDimensionRatio="4dp"
    android:layout_margin="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTituloIPServidor"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:text="IP do Servidor"
            android:textColor="@color/cinzaPrincipal"
            android:textSize="16dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editIPServidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_eye"
            android:hint="@string/labelIPServidor"
            android:inputType="textPhonetic"
            android:minHeight="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSelectHandleRight="@android:drawable/ic_lock_lock"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textTituloPorta"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:text="Porta do Servidor"
            android:textColor="@color/cinzaPrincipal"
            android:textSize="16dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editPortaServidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_eye"
            android:hint="@string/labelPortaServidor"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSelectHandleRight="@android:drawable/ic_lock_lock"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnGravarParâmetros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cinzaPrincipal"
            android:text="@string/gravar_parametro"
            />

        <Button
            android:id="@+id/btnTestarConexao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/cinzaPrincipal"
            android:text="@string/testar_conexao"
            />

        <Button
            android:id="@+id/btnSincronizarDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/cinzaPrincipal"
            android:text="@string/sincronizar_dados"
            />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>