<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tdp_tela"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    tools:context=".Principal_Login">

    <ImageView
        android:id="@+id/tdpFundo"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/fundomaterialdesign"
        app:layout_constraintEnd_toEndOf="match_parent"
        app:layout_constraintStart_toStartOf="match_parent"
        app:layout_constraintTop_toTopOf="match_parent"
        tools:context=".Principal_Login"
        tools:ignore="ImageContrastCheck" />

    <View
        android:id="@+id/containerLogin"
        style="@style/ContainerComponentesLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tdpFundo"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintTop_toTopOf="@+id/containerLogin"
        android:padding="5dp"
        android:text="@string/login_facilite_comanda_pay"
        android:textAlignment="center"
        android:textColor="#B71C1C"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerRepresentantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_margin="10dp"
        android:minHeight="48dp"
        android:contentDescription="@string/comboRepresentante"
        android:autofillHints="@string/comboRepresentante"/>

    <EditText
        android:id="@+id/editPassRepresentantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableRight="@drawable/ic_eye"
        android:hint="@string/labelSenhaLogin"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSelectHandleRight="@android:drawable/ic_lock_lock"
        app:layout_constraintStart_toStartOf="@+id/spinnerRepresentantes"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRepresentantes"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/editPassRepresentantes"
        app:layout_constraintTop_toBottomOf="@+id/editPassRepresentantes"
        android:layout_margin="10dp"
        android:background="@color/cinzaPrincipal"
        android:text="@string/entrar"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
