<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_comandas_para_finalizacao"
    android:clickable="false"
    android:descendantFocusability="blocksDescendants"
    android:focusable="true"
    android:focusableInTouchMode="false"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    android:layout_margin="7dp">

    <RelativeLayout
        android:id="@+id/card_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/borda_recebimento">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_card_numerocomanda"
            style="@style/ContainerComponentesNumeroComanda"
            app:layout_constraintCircleRadius="20dp">

            <TextView
                android:id="@+id/tvNumeroComanda"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:padding="2dp"
                android:text="@string/_10"
                android:textAlignment="center"
                android:textColor="@color/cinzaSecundario"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llClienteMesa"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="95dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_toStartOf="@+id/llStatus">


            <TextView
                android:id="@+id/tvCliente"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:padding="2dp"
                android:text="@string/venda_consumidor_teste"
                android:textAlignment="gravity"
                android:textColor="@color/cinzaPrincipalTexto"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMesa"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:padding="2dp"
                android:text="@string/mesa_01"
                android:textAlignment="gravity"
                android:textColor="@color/cinzaTitulo"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="50dp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llStatus"
            android:layout_width="85dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:background="@drawable/borda_status_ocupado"
            app:layout_constraintCircleRadius="20dp"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/ocupado"
                android:textAlignment="center"
                android:layout_marginTop="2dp"
                android:textColor="@color/cinzaPrincipalTexto"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"  />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llTitulos"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_below="@+id/view_card_numerocomanda">

            <TextView
                android:id="@+id/tvTituloTotalPedido"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight=".30"
                android:text="@string/total_pedido"
                android:textAlignment="gravity"
                android:textColor="@color/cinzaTitulo"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTituloRecebido"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight=".30"
                android:text="@string/recebido"
                android:textAlignment="gravity"
                android:textColor="@color/cinzaTitulo"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvTituloAReceber"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight=".60"
                android:text="@string/receber"
                android:textAlignment="textEnd"
                android:textColor="@color/cinzaTitulo"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTValores"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_below="@+id/llTitulos">

            <TextView
                android:id="@+id/tvValorTotalPedido"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight=".30"
                android:text="@string/r_1_110_99"
                android:textAlignment="gravity"
                android:textColor="@color/cinzaPrincipal"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvValorRecebido"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight=".30"
                android:text="@string/r_20_00"
                android:textAlignment="gravity"
                android:textColor="@color/recebimento"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvValorAReceber"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight=".60"
                android:padding="0dp"
                android:text="@string/r_1_090_99"
                android:textAlignment="textEnd"
                android:textColor="@color/cinzaPrincipalTexto"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>