<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/cinzaFracoPrimario">

    <LinearLayout
        android:id="@+id/llBarraTitulo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/vermelhoTDP">
        <TextView
            android:id="@+id/tvTituloCobranca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cobranca"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/container_titulo_dialogs"
        android:orientation="vertical">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etValorCobranca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/labelCobranca"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="#616161" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancelarCobranca"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_weight=".45"
                android:drawableTop="@drawable/ic_baseline_cancel_24"
                android:text="@string/cancelar"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Button
                android:id="@+id/bConfirmarCobranca"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_weight=".45"
                android:drawableTop="@drawable/ic_baseline_check_24"
                android:text="@string/confirmar"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>