<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_comandas_selecionada_finalizacao"
    android:clickable="false"
    android:descendantFocusability="blocksDescendants"
    android:focusable="true"
    android:focusableInTouchMode="false"
    android:background="@color/cinzaFracoPrimario"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    android:layout_margin="7dp">

    <RelativeLayout
        android:id="@+id/card_constraint_selecionada"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/borda_recebimento">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_card_numerocomanda"
            style="@style/ContainerComponentesNumeroComanda"
            app:layout_constraintCircleRadius="20dp">

            <TextView
                android:id="@+id/tvNumeroComandaSelecionada"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:padding="2dp"
                android:text="@string/_10"
                android:textAlignment="center"
                android:textColor="@color/cinzaSecundario"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llClienteMesaSelecionada"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_toStartOf="@+id/llStatusSelecionada">


            <TextView
                android:id="@+id/tvClienteSelecionada"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:padding="2dp"
                android:text="@string/venda_consumidor_teste"
                android:textAlignment="gravity"
                android:textColor="@color/cinzaPrincipalTexto"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMesaSelecionada"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:padding="2dp"
                android:text="@string/mesa_01"
                android:textAlignment="gravity"
                android:textColor="@color/cinzaTitulo"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="50dp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llStatusSelecionada"
            android:layout_width="85dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:background="@drawable/borda_status_ocupado"
            app:layout_constraintCircleRadius="20dp"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/tvStatusSelecionada"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/ocupado"
                android:textAlignment="center"
                android:layout_marginTop="1dp"
                android:textColor="@color/cinzaPrincipalTexto"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"  />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>