<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentDetalheFinalizacao"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinzaFracoPrimario">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTituloTotal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/total"
            android:textColor="@color/cinzaPrincipalTexto"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvValorTotalComanda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvTituloTotal"
            android:text="@string/r_x_xxx_xx"
            android:textAlignment="textEnd"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/cinzaPrincipalTexto"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/separacao"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cvDesconto"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:background="@color/cinzaPrincipal"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="showDialogDesconto">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/container_desconto_foco">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llContentCobranca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center|center"
                    android:layout_margin="2dp">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".10"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_edit_24"
                        />
                    <TextView
                        android:id="@+id/tvDesconto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".40"
                        android:layout_gravity="center"
                        android:text="@string/desconto"
                        android:textSize="18sp"
                        android:textColor="@color/cinzaPrincipalTexto"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvTotalDesconto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".40"
                        android:layout_toEndOf="@+id/cvDesconto"
                        android:layout_gravity="center|end"
                        android:text="@string/r_x_xxx_xx"
                        android:textAlignment="textEnd"
                        android:textColor="@color/cinzaPrincipalTexto"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/separacao"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llPagamentos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_below="@+id/tvTituloTotal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lvListaCobrancasPagamento"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:choiceMode="none"
            android:dividerHeight="2px"
            android:scrollbars="vertical"
            android:scrollbarSize="4dp"
            android:scrollbarStyle="outsideOverlay"
            android:fadeScrollbars="false"
            android:scrollbarThumbVertical="@drawable/scroll_recyclerview">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTSaldo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/a_receber"
            android:textColor="@color/vermelhoSecundario"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/separacao"/>
        <TextView
            android:id="@+id/tvAReceber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvTSaldo"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/r_x_xxx_xx"
            android:textAlignment="textEnd"
            android:textColor="@color/vermelhoSecundario"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>